upgrade java, spring and telegram-api lib